tmp: Added temporary unit test file for triggering a memory leak

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -13,6 +13,7 @@ tests_unit_TESTS			=  \
 	tests/unit/test_findcrlf	   \
 	tests/unit/test_tags		   \
 	tests/unit/test_logwriter	   \
+	tests/unit/test_logwriter_new	   \
 	tests/unit/test_zone		   \
 	tests/unit/test_persist_state	   \
 	tests/unit/test_value_pairs
@@ -69,6 +70,9 @@ tests_unit_test_tags_LDADD		= \
 	$(TEST_LDADD) $(unit_test_extra_modules)
 
 tests_unit_test_logwriter_LDADD		= \
+	$(TEST_LDADD) $(unit_test_extra_modules)
+
+tests_unit_test_logwriter_new_LDADD		= \
 	$(TEST_LDADD) $(unit_test_extra_modules)
 
 tests_unit_test_zone_LDADD		= \
