Added testcase for previous commit.
testcase currently fails due to an other bug.

--- a/lib/tests/Makefile.am
+++ b/lib/tests/Makefile.am
@@ -11,7 +11,8 @@ lib_tests_TESTS		= \
 	lib/tests/test_lexer        \
 	lib/tests/test_str_format   \
 	lib/tests/test_runid        \
-	lib/tests/test_pathutils
+	lib/tests/test_pathutils    \
+    lib/tests/test_mainloop
 
 check_PROGRAMS		+= ${lib_tests_TESTS}
 
@@ -86,6 +87,12 @@ lib_tests_test_pathutils_CFLAGS	=	\
 	$(TEST_CFLAGS)
 lib_tests_test_pathutils_LDADD	=	\
 	$(TEST_LDADD)
+
+lib_tests_test_mainloop_CFLAGS	=	\
+	$(TEST_CFLAGS)
+lib_tests_test_mainloop_LDADD	=	\
+	$(TEST_LDADD)
+
 
 CLEANFILES				+= \
 	test_values.persist		   \
